--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^17.0.2",
     "react-charts": "^3.0.0-beta.54",
     "react-chat-engine": "^1.11.28",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
     "react-inner-image-zoom": "^3.0.1",
