--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "@lexical/react": "^0.10.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -20,6 +21,7 @@
     "eslint-config-react-app": "^7.0.0",
     "i18next": "^21.6.12",
     "jquery": "^3.6.0",
+    "lexical": "^0.10.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "node-sass": "^7.0.1",
