--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "animate.css": "^4.1.1",
     "antd": "^4.18.9",
     "axios": "^0.26.0",
+    "ckeditor4-react": "^4.2.0",
     "clsx": "^1.1.1",
     "eslint-config-react-app": "^7.0.0",
     "i18next": "^21.6.12",
